syntax = "proto3";

import "MotionInfo.proto";

message EntityForceSyncReq {
   uint32 entity_id = 1;
   MotionInfo motion_info = 2;
   uint32 scene_time = 3;
   uint32 room_id = 4;
}
  