syntax = "proto3";

message GetDailyDungeonEntryInfoReq {
   uint32 scene_id = 1;
}
  